/**
 * ======================================================
 * ARCHIVO: er_diagram.puml
 * UBICACIÓN: menu-qr-system/docs/diagrams/er_diagram.puml
 * FASE: DOC
 * VERSIÓN: 1.0
 * ÚLTIMA ACTUALIZACIÓN: 2024-01-17 02:15
 *
 * 🎯 PROPÓSITO:
 * Diagrama entidad-relación que muestra la estructura
 * completa de la base de datos del sistema MENU QR PLUS,
 * incluyendo tablas, relaciones y campos principales.
 *
 * 📦 NOTA:
 * Este archivo debe ser renderizado con PlantUML
 *
 * 🔗 RELACIONES:
 * - Visualiza el modelo de datos
 *
 * 📋 HISTORIAL DE CAMBIOS:
 * ------------------------------------------------------
 * 1.0 - 2024-01-17 02:15
 *    ✅ Creación inicial del diagrama
 *    ✅ Tablas principales
 *    ✅ Relaciones entre entidades
 *    ✅ Tipos de datos
 * ======================================================
 */

@startuml MENU_QR_PLUS_ER_DIAGRAM
!theme plain

title MENU QR PLUS - Diagrama Entidad-Relación (ER)

' ======================================================
' ESTILOS
' ======================================================

skinparam class {
  BackgroundColor #F0F0F0
  BorderColor #333333
  FontColor #000000
  FontSize 11
  ArrowColor #0066CC
}

skinparam entity {
  BackgroundColor #E8FDE8
  BorderColor #008800
}

' ======================================================
' ENTIDADES (TABLAS)
' ======================================================

entity "tenants" as tenants {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(100)
  * slug : VARCHAR(50) <<UK>>
  logo_url : TEXT
  primary_color : VARCHAR(7)
  whatsapp_number : VARCHAR(20)
  email : VARCHAR(100)
  phone : VARCHAR(20)
  address : TEXT
  is_active : BOOLEAN
  subscription_tier : VARCHAR(20)
  settings : JSONB
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "branches" as branches {
  * id : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  * name : VARCHAR(100)
  * address : TEXT
  phone : VARCHAR(20)
  whatsapp_number : VARCHAR(20)
  latitude : DECIMAL(10,8)
  longitude : DECIMAL(11,8)
  is_active : BOOLEAN
  delivery_zones : JSONB
  delivery_cost : DECIMAL(10,2)
  free_delivery_min_amount : DECIMAL(10,2)
  schedule : JSONB
  settings : JSONB
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tables" as tables {
  * id : UUID <<PK>>
  --
  * branch_id : UUID <<FK>>
  * table_number : VARCHAR(20)
  table_name : VARCHAR(50)
  qr_code : TEXT
  capacity : INT
  position_x : INT
  position_y : INT
  shape : VARCHAR(20)
  width : INT
  height : INT
  status : VARCHAR(20)
  current_order_id : UUID <<FK>>
  is_active : BOOLEAN
  occupied_since : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "categories" as categories {
  * id : UUID <<PK>>
  --
  * branch_id : UUID <<FK>>
  * name : VARCHAR(50)
  description : TEXT
  icon : VARCHAR(50)
  display_order : INT
  is_active : BOOLEAN
  module_type : VARCHAR(30)
  start_time : TIME
  end_time : TIME
  days_of_week : INTEGER[]
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "products" as products {
  * id : UUID <<PK>>
  --
  * category_id : UUID <<FK>>
  * name : VARCHAR(100)
  description : TEXT
  * price : DECIMAL(10,2)
  image_url : TEXT
  image_public_id : VARCHAR(200)
  is_available : BOOLEAN
  is_featured : BOOLEAN
  display_order : INT
  preparation_time : INT
  allergens : TEXT[]
  tags : VARCHAR(50)[]
  modifiers : JSONB
  branch_specific : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "branch_modules" as branch_modules {
  * id : UUID <<PK>>
  --
  * branch_id : UUID <<FK>>
  * module_name : VARCHAR(30)
  is_enabled : BOOLEAN
  schedule : JSONB
  settings : JSONB
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "orders" as orders {
  * id : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  * branch_id : UUID <<FK>>
  table_id : UUID <<FK>>
  * order_type : VARCHAR(20)
  * order_number : SERIAL
  * customer_name : VARCHAR(100)
  * customer_phone : VARCHAR(20)
  customer_email : VARCHAR(100)
  delivery_address : TEXT
  delivery_latitude : DECIMAL(10,8)
  delivery_longitude : DECIMAL(11,8)
  * items : JSONB
  * subtotal : DECIMAL(10,2)
  delivery_cost : DECIMAL(10,2)
  discount : DECIMAL(10,2)
  * total : DECIMAL(10,2)
  payment_method : VARCHAR(30)
  payment_status : VARCHAR(20)
  order_status : VARCHAR(20)
  notes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  completed_at : TIMESTAMP
}

' ======================================================
' RELACIONES
' ======================================================

tenants ||--o{ branches : "tiene"
tenants ||--o{ orders : "recibe"

branches ||--o{ tables : "contiene"
branches ||--o{ categories : "organiza"
branches ||--o{ branch_modules : "configura"
branches ||--o{ orders : "genera"

categories ||--o{ products : "agrupa"

tables ||--o{ orders : "atiende"

' ======================================================
' ÍNDICES SUGERIDOS
' ======================================================

note right of orders
  <b>Índices recomendados:</b>
  - idx_orders_tenant_id
  - idx_orders_branch_id
  - idx_orders_table_id
  - idx_orders_created_at
  - idx_orders_order_status
end note

note right of products
  <b>Índices recomendados:</b>
  - idx_products_category_id
  - idx_products_is_available
  - idx_products_is_featured
end note

note right of categories
  <b>Índices recomendados:</b>
  - idx_categories_branch_id
  - idx_categories_module_type
end note

note right of tables
  <b>Índices recomendados:</b>
  - idx_tables_branch_id
  - idx_tables_status
end note

note right of branches
  <b>Índices recomendados:</b>
  - idx_branches_tenant_id
  - idx_branches_is_active
  - idx_branches_location (GIST)
end note

note right of tenants
  <b>Índices recomendados:</b>
  - idx_tenants_slug
  - idx_tenants_email
  - idx_tenants_is_active
end note

' ======================================================
' LEYENDA
' ======================================================

legend right
  <b>Convenciones:</b>
  - <<PK>> Primary Key
  - <<FK>> Foreign Key
  - <<UK>> Unique Key
  - * Campo obligatorio
  - [] Array de datos
  - JSONB Datos flexibles
endlegend

@enduml